--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="stylesheet" href="./css/font-awesome.min.css">
     <link rel="stylesheet" href="./css/sb-admin-2.css">
-    <link rel="stylesheet" href="./css/timeline.css">
+    <link rel="stylesheet" type="text/css" href="node_modules/ng2-toasty/ng2-toasty.css">
     <!-- 1. Load libraries -->
      <!-- Polyfill(s) for older browsers -->
     <script src="node_modules/core-js/client/shim.min.js"></script>
