--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="./css/sb-admin-2.css">
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="stylesheet" href="./css/font-awesome.min.css">
-    <link rel="stylesheet" href="./css/sb-admin-2.css">
     <link rel="stylesheet" type="text/css" href="node_modules/ng2-toasty/ng2-toasty.css">
     <!-- 1. Load libraries -->
      <!-- Polyfill(s) for older browsers -->
@@ -25,8 +25,8 @@
   </head>
   <!-- 3. Display the application -->
   <body>
-    
+     <div id="wrapper">
         <my-app>Loading...</my-app>
-     
+     </div>
   </body>
 </html>
